vlib/v/checker/tests/array_filter_fn_err_a.vv
fn fil(a int, b int) bool {
	return a > 0
}
fn main() {
	a := [1,2,3,4].filter(fil)
	println(a)
}
